--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
-  thymeleaf:
-    mode: HTML
   datasource:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/music1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
 server:
   port: 8888
